tests/src/Loader/classloader/generics/Instantiation/Positive/NestedStruct02.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    public class _generics_Instantiation_Positive_NestedStruct02_NestedStruct02_
    {
        [OuterLoop]
        [Fact]
        public void _generics_Instantiation_Positive_NestedStruct02_NestedStruct02_cmd()
        {
            CoreclrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Positive\\NestedStruct02\\NestedStruct02.cmd");
        }
    }
}
