tests/src/Loader/classloader/generics/Instantiation/Negative/param06.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    public class _generics_Instantiation_Negative_param06_param06_
    {
        [OuterLoop]
        [Fact]
        public void _generics_Instantiation_Negative_param06_param06_cmd()
        {
            CoreclrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Negative\\param06\\param06.cmd");
        }
    }
}
